# dummy-proto

./: LICENSE  MODULE.bazel  README.md
tools/: BUILD  gen_dummy.bzl  gen_dummy.cc
tools/tests/: BUILD  counts.json  enums.json  test.proto
tools/tests/testdata/: test_dummy.gold.pb
