module(
    name = "com_github_bcsgh_dummy_proto",
    version = "0.0.1",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "jsoncpp",
    version = "1.9.6",
)

bazel_dep(
    name = "protobuf",
    version = "29.2",
)
