module(
    name = "com_github_bcsgh_dummy_proto",
    version = "0.0.1",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
    dev_dependency = True,
)

bazel_dep(
    name = "jsoncpp",
    version = "1.9.6",
)
bazel_dep(
    name = "protobuf",
    version = "29.2",
)
bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)

bazel_dep(
    name = "stardoc",
    version = "0.7.1",
    dev_dependency = True,
)
